--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div id="notSupportedWrap">
 			<h2 id="notSupportedTitle">This content requires JavaScript</h2>
 			<p class="notSupportedMessage">JavaScript appears to be disabled. Please enable it to view this content.</p>
-			<p class="notSupportedMessage">This content was built with Construct, an <a href="https://www.construct.net/en">online game creator</a>.</p>
+			<p class="notSupportedMessage">This content was designed with Construct 3. <a href="https://www.construct.net/en">Make a game</a></p>
 		</div>
 	</noscript>
 	<script src="scripts/supportCheck.js"></script>
